@@ -1,5 +1,7 @@
 March 2019
   - Added YubiKey as 2-factor authentication provider
+  - LAM Pro:
+   - New self service fields: Mail routing (Local address) and Windows (Proxy-Addresses)
 
 28.12.2018 6.6
   - New import/export in tools menu
